Fix responsive layout issues

--- a/gatsby/src/components/Article.module.scss
+++ b/gatsby/src/components/Article.module.scss
@@ -21,15 +21,6 @@
 
 }
 
-@include breakpoint('lg') {
-
-  $content-width: 720px;
-
-  .content {
-    max-width: $content-width;
-  }
-}
-
 @include breakpoint('xl') {
   .article {
     display: grid;
@@ -60,10 +51,12 @@
       'header aside'
       'content aside';
     grid-template-columns: 1fr 300px; /* stylelint-disable-line plugin/no-unsupported-browser-features */
+    justify-items: start;
   }
 
   .header {
     grid-area: header;
+    width: 100%;
   }
 
   .aside {
@@ -78,7 +71,7 @@
 
   .content {
     grid-area: content;
-    max-width: 720px;
+    max-width: 800px;
   }
 }
 
